# prompt-optimizer

./: .gitignore  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE_DIAGRAM.md  DOMAIN_ER.md  INTERACTION_FLOW.md  REQUIREMENT.md  USE_CASES.md
src/prompt_optimizer/: __init__.py
src/prompt_optimizer/cli/: __init__.py  main.py
src/prompt_optimizer/core/: __init__.py  application_metadata.py  configuration_loader.py  configuration_models.py  improve_orchestrator.py  improve_request_loader.py  improvement_models.py  llm_response_parser.py  model_gateway.py  prompt_module_models.py  structured_response_models.py
tests/: test_cli_smoke.py  test_improve_orchestration_flow.py  test_improve_request_flow.py  test_model_gateway_flow.py  test_prompt_module_flow.py  test_readme_documentation.py
