[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-improver"
version = "0.1.0"
description = "CLI foundation for improving prompts."
requires-python = ">=3.12,<3.13"
dependencies = [
    "typer>=0.16.0",
]

[project.scripts]
prompt-improver = "prompt_optimizer.cli.main:main"

[dependency-groups]
dev = [
    "mypy>=1.18.0",
    "pytest>=8.4.0",
    "ruff>=0.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_optimizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
files = ["src", "tests"]
explicit_package_bases = true
